# iot-security-module-core

./: .gitignore  CMakeLists.txt
.build/: install-build-packages.sh
cmake-modules/: CMockaConfig.cmake  asc_security_core_build_rules.cmake
inc/asc_security_core/: configuration.h  logger.h
inc/asc_security_core/model/: event.h
inc/asc_security_core/model/schema/: schema_connection_create.h  schema_listening_ports.h
inc/asc_security_core/utils/: itime.h  iuuid.h
src/: collector_collection.c  collectors_information.c  core.c  logger.c
src/collectors/: heartbeat.c
src/model/: collector.c  event.c
src/model/message/: message_v10.c
src/model/schema/: schema_connection_create.c  schema_listening_ports.c
tests/: CMakeLists.txt
tests/collector_collection_internal_ut/: CMakeLists.txt  collector_collection_internal_ut.c  main.c
tests/collector_collection_ut/: CMakeLists.txt  collector_collection_ut.c  main.c
tests/collector_heartbeat_ut/: CMakeLists.txt  collector_heartbeat_ut.c  event_sample.json
tests/collector_ut/: CMakeLists.txt  collector_ut.c  event_sample.json  main.c
tests/collectors_info_ut/: CMakeLists.txt  collectors_info_ut.c
tests/core_int/: CMakeLists.txt  core_int.c
tests/core_ut/: CMakeLists.txt  core_ut.c
tests/linked_list_ut/: CMakeLists.txt  linked_list_ut.c  main.c
tests/mocks/inc/: collector_collection_factory.h  collector_mock.h
tests/mocks/inc/utils/: irand.h  itime.h  iuuid.h  utils.h
tests/mocks/src/: collector_collection_factory.c  collector_mock.c  event.c  network_utils.c
tests/mocks/src/utils/: irand.c  itime.c  iuuid.c  utils.c
tests/model/event_ut/: CMakeLists.txt  event_ut.c
tests/model/message_ut/: CMakeLists.txt  message_ut.c
tests/object_pool_ut/: CMakeLists.txt  object_pool_ut.c
tests/stack_ut/: CMakeLists.txt  stack_ut.c
tests/utils/collection/hashset_ut/: CMakeLists.txt  data.h  hashset_ut.c
tests/utils/notifier_ut/: CMakeLists.txt  notifier_ut.c
tests/utils/string_utils_ut/: CMakeLists.txt  string_utils_ut.c
